@@ -1,5 +1,14 @@
 2008-10-17	Brian Tarricone <bjt23@cornell.edu>
 
+	* xfce4-session/xfsm-startup.c: Store the result of fork() in a
+	  temporary again to avoid possible memory access issues if
+	  vfork() is used.
+	* xfce4-session/xfsm-manager.c: Fix a XfsmProperties leak if
+	  a SmRestartNever or SmRestartIfRunning client exits and doesn't
+	  have a discard command, or exits during initial startup.
+
+2008-10-17	Brian Tarricone <bjt23@cornell.edu>
+
 	* xfce4-session/xfsm-properties.[ch]: Track the PID of properties
 	  that have an associated app running, whether or not it's
 	  registered with the SM.  Add client ID comparison function.
